# Advanced-C-for-Robotics

./: README.md
build_tools/odom_sub_vel/: CMakeLists.txt  package.xml
build_tools/odom_sub_vel/src/: odom_listener_vel.cpp
build_tools/test_library/include/test_library/: test_library.h
build_tools/vel_library/: CMakeLists.txt  package.xml
build_tools/vel_library/include/vel_library/: vel_library.hpp
build_tools/vel_library/src/: vel_library.cpp
classes/my_robot_manager/: CMakeLists.txt  package.xml
classes/my_robot_manager/include/my_robot_manager/: robot_manager.h
classes/my_robot_manager/src/: robot_manager.cpp  robot_manager_node.cpp
classes/test_gec/: CMakeLists.txt  package.xml
classes/test_gec/src/: checker.cpp
classes/unit3_demos/: classes_.cpp  classes_junk_1.cpp  constructor_.cpp  demo_361.cpp  demo_383.cpp  structures_.cpp
oops/demos/: demo_411  demo_411.cpp
oops/robot_manager_composition/: CMakeLists.txt
oops/robot_manager_composition/include/robot_manager_composition/: robot_manager_composition.h
oops/robot_manager_composition/src/: robot_manager_composition.cpp  robot_manager_composition_node.cpp
oops/robot_manager_inheritance/: CMakeLists.txt
oops/robot_manager_inheritance/include/robot_manager_inheritance/: base_robot_manager.h  mobile_robot_robot_manager.h
oops/robot_manager_inheritance/src/: base_robot_manager.cpp  base_robot_manager_node.cpp  mobile_robot_robot_manager.cpp  mobile_robot_robot_manager_node.cpp
stl/exercises_unit_2/: CMakeLists.txt
stl/exercises_unit_2/src/: lists.cpp  path_coordinates.cpp  path_coordinates_map.cpp  robot_heading_as_deque.cpp  robot_heading_as_vector.cpp  robot_position_as_array.cpp
stl/stl_lib/: arr  array_test.cpp  forwardl.cpp  it3  it3.cpp  map_function.cpp  msf  mso  multiset.cpp  set_function.cpp  setfunction
